package fr.univlille.labyrinth.app;

import javafx.scene.effect.GaussianBlur;
import javafx.scene.media.Media;
import javafx.scene.media.MediaPlayer;
import javafx.scene.media.MediaView;
import javafx.stage.Stage;
import javafx.util.Duration;

/*
 * Vidéo animée en fond, restant en dessous de toutes les scènes.
 * gaussian blur = niveau de flou
 */
public class BackgroundManager {
    private final static int GAUSSIAN_BLUR_VALUE=0;

    private final MediaView mediaView;
    private final MediaPlayer mediaPlayer;

    public BackgroundManager(String videoPath, Stage stage) {
        Media media = new Media(getClass().getResource(videoPath).toExternalForm());
        mediaPlayer = new MediaPlayer(media);
        mediaPlayer.setCycleCount(MediaPlayer.INDEFINITE);
        mediaPlayer.setAutoPlay(true);
        mediaPlayer.setOnEndOfMedia(() -> mediaPlayer.seek(Duration.ZERO));

        mediaView = new MediaView(mediaPlayer);
        mediaView.setPreserveRatio(false);
        mediaView.fitWidthProperty().bind(stage.widthProperty());
        mediaView.fitHeightProperty().bind(stage.heightProperty());
        mediaView.setEffect(new GaussianBlur(GAUSSIAN_BLUR_VALUE));
    }

    /** 
     * @return MediaView
     */
    public MediaView getMediaView() {
        return mediaView;
    }

    /** 
     * @param visible
     */
    public void setVisible(boolean visible) {
        mediaView.setVisible(visible);
    }

    /** 
     * @param page
     * @return boolean
     */
    public boolean shouldShowBackground(String page) {
        return !page.contains("Labyrinth");
    }
}
